# Gopdash

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: config.rs  error.rs  main.rs  state.rs
backend/src/middleware/: auth.rs
backend/src/routes/: api.rs  auth.rs  mod.rs  sse.rs
backend/src/services/: docker.rs  docker_updates.rs  health.rs  homeassistant.rs  jellyfin.rs  mod.rs  rss.rs  session.rs  system.rs  weather.rs
config/: app.yaml  dashboard.yaml  layout.yaml  services.yaml
config.example/: app.yaml  dashboard.yaml  layout.yaml  services.yaml
frontend/: components.json  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  auth.svelte.ts  config.svelte.ts  docker-groups.ts  icons.ts  layout.svelte.ts  locale.ts  search.ts  sse.svelte.ts  theme.svelte.ts  types.ts  utils.ts  weather-icons.ts
frontend/src/lib/components/: AppIcon.svelte  AppLogo.svelte  Dashboard.svelte  Header.svelte  LayoutLockToggle.svelte  ThemeToggle.svelte  WidgetHeader.svelte  WidgetRenderer.svelte
frontend/src/lib/components/widgets/: BookmarksWidget.svelte  CalendarWidget.svelte  DockerStackWidget.svelte  DockerUpdatesWidget.svelte  DockerWidget.svelte  HomeAssistantWidget.svelte  JellyfinWidget.svelte  RssWidget.svelte  (+3 more)
frontend/src/locales/: en.json  fr.json
frontend/src/routes/: +layout.svelte
frontend/src/routes/(app)/: +layout.svelte
frontend/src/routes/login/: +page.svelte
(+1 files in other folders)
