[package]
name = "gopdash"
version = "0.1.0"
edition = "2021"
description = "Lightweight self-hosted dashboard"
license = "MIT"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Profil Docker / CI : compile beaucoup plus vite (surtout sur CPU faibles type N100).
# L'image finale est ~quelques % plus grosse ; le runtime reste très léger.
[profile.release-docker]
inherits = "release"
lto = false
codegen-units = 16
strip = true

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "compression-gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
bollard = "0.18"
sysinfo = "0.33"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
rss = "2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
notify = "7"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
